syntax = "proto3";

import 'Common.proto';

option java_multiple_files = true;
option java_package = "com.example.DistributedAssignment.services";
option java_outer_classname = "CredentialsServices";
option objc_class_prefix = "HLW";

service Credentials{
  rpc createAccount(CreateAccountRequest) returns (UserID) {}
  rpc login(LoginRequest) returns (UserID) {}
  rpc logout(UserID) returns (Void) {}
  rpc addSession(SessionData) returns(Void){}
  rpc getSession(SessionData) returns(SessionData){}
  rpc removeSession(SessionData) returns(Void){}
}

message SessionData{
  int32 userId = 1;
  string hostname = 2;
}

message CreateAccountRequest{
  string username = 1;
  string password = 2;
  string name = 3;
  UserType userType = 4;
}

message LoginRequest{
  string username = 1;
  string password = 2;
  string sellerName = 3;
  UserType userType = 4;
}

enum UserType{
  BUYER = 0 ;
  SELLER = 1;
}